# GameAgent

./: .gitignore  CHECKLIST.md  PLAN.md  PROGRESS.md  README.md  analyze_textarena_metrics.py  pyproject.toml  render_textarena_trace.py  requirements.txt  run_textarena_agent.py  run_textarena_evaluate.py  run_textarena_rl_baseline.py  要求.txt
examples/: offline_textarena_episode.py
references/: NOTES.md
references/expel/: README.md
references/reflexion/: README.md
references/voyager/: README.md
src/textarena_llm_agent/: __init__.py  action_analyzer.py  agent.py  analysis.py  cli.py  context_packet.py  critic_agent.py  evaluation.py  evaluator.py  evidence_graph.py  experiments.py  game_specs.py  hypothesis.py  insight.py  llm.py  memory.py  optimal_agents.py  prompt_builder.py  prompt_compiler.py  prompts.py  reflection.py  retrieval.py  rl_baseline.py  skill_manager.py  state_encoder.py  tool_library.py  tool_loop.py  tool_synthesis.py  tool_validator.py  tools.py  trace_schema.py  tracing.py  visualization.py
tests/: test_critic_agent.py  test_decision_frame.py  test_evidence_graph.py  test_hypothesis_harness.py  test_prompt_cache.py  test_skill_lifecycle.py  test_textarena_agent.py  test_textarena_analysis.py  test_textarena_visualization.py  test_tool_pipeline.py
